# Arxan

AnnPractice/A4A_APKProtection/: runA4A.sh  runA4A_AAB.sh
android-master/android-master/simplearxan/app/: CMakeLists.txt  build.gradle  local.properties
android-master/android-master/simplearxan/app/gradle/wrapper/: gradle-wrapper.properties
android-master/android-master/simplearxan/app/release/: app-release_註解.apk  output-metadata.json
android-master/android-master/simplearxan/app/src/androidTest/java/pet/ca/simplearxan/: ExampleInstrumentedTest.java
android-master/android-master/simplearxan/app/src/main/: AndroidManifest.xml
android-master/android-master/simplearxan/app/src/main/cpp/: native-lib.cpp
android-master/android-master/simplearxan/app/src/main/cpp/Arxan/: GuardSpec.cpp
android-master/android-master/simplearxan/app/src/main/java/Arxan/: CustomDetectRule.java  TamperAction.java
android-master/android-master/simplearxan/app/src/main/java/my/reflection/: Employee.java
android-master/android-master/simplearxan/app/src/main/java/pet/ca/simplearxan/: BaseFragment.java  CCFragment.java  GuardLocation.java  JKFragment.java  JNIUtils.java  MainActivity.java  MyHandler.java  SecondActivity.java
android-master/android-master/simplearxan/app/src/main/res/layout/: activity_main.xml  activity_main2.xml  fragment_a4a.xml  fragment_eit.xml
android-master/android-master/simplearxan/app/src/main/res/values/: colors.xml  strings.xml
android-master/android-master/simplearxan/app/src/test/java/pet/ca/simplearxan/: ExampleUnitTest.java
(+80 files in other folders)
